--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'hugoserif@example.com'
-phone: '1800 123 000'
-contact_button_link: 'contact'
+email: 'manasadentalclinic@gmail.com'
+phone: '076204 26650'
+contact_button_link: 'https://wa.me/+9107620426650?text=I%20am%20interested%20in%20booking%20appointment&lang=en'
