--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "www.example.com"
+baseURL = "/"
 languageCode = "en-us"
-title = "Hugo Serif Theme"
+title = "Manasa Dental Clinic"
 
 [params]
   # In most cases you will only want to use either one of these. If you have Google Analytics included in your GTM tags don't put your GA ID here. Otherwise your data might be useless.
@@ -12,19 +12,19 @@ title = "Hugo Serif Theme"
     hide_view_all_services = false  # set to true to hide the View All Services button
 
   [params.logo]
-    mobile = "images/logo/logo-mobile.svg"
-    mobile_height = "36px"
-    desktop = "images/logo/logo.svg"
-    desktop_height = "36px"
-    alt = "Serif - A Hugo Business Theme"
+    mobile = "images/logo/logo.png"
+    mobile_height = "72px"
+    desktop = "images/logo/logo.png"
+    desktop_height = "72px"
+    alt = "Manasa Dental Clinic"
 
   [params.homepage_meta_tags]
     meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-    meta_og_title = "Hugo Serif Theme"
+    meta_og_title = "Manasa Dental Clinic"
     meta_og_type = "website"
     meta_og_url = "https://hugo-serif.netlify.app"
     meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
-    meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
+    meta_og_description = "We provide a wide range of oral health care services to patients, from routine check ups and cleanings to fitting braces and treating oral diseases, with high quality care at affordable rates."
     meta_twitter_card = "summary"
     meta_twitter_site = "@zerostaticio"
     meta_twitter_creator = "@zerostaticio"
@@ -33,7 +33,7 @@ title = "Hugo Serif Theme"
     summary_large_truncate = 120  # How many characters to include in the summary of the team bios (large layout) before truncating
 
   [params.footer]
-    copyright_text = 'Free Hugo theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+    copyright_text = 'Manasa Dental Clinic'
 
 [menu]
   # Main Menu
